Improvements to layout and responsiveness

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -3,7 +3,8 @@ $highlightLink: #ffa000;
 $header-color: rgb(59, 65, 71);
 $header-bg-color: rgb(40, 42, 44);
 $primary: #16a085;
+$header-height: 80px;
 $burger-dimensions: 40px;
-$menu-width: 200px;
+$menu-width: 220px;
 $image-height: 400px;
-$contactHeight: 4rem;
+$contactHeight: 3rem;
