Centred home and contact page content

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -275,7 +275,7 @@ body {
 
 .home-container, .contact-container {
     height: 70%;
-    margin-bottom: 20%;
+    // margin-bottom: 20%;
     justify-content: center;
     & > div {
         width: 80%;
