--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -529,6 +529,12 @@ body {
     }
 }
 
+@media screen and (min-width: 900px) {
+    .fader {
+        width: 60%;
+    }
+}
+
 @media screen and (min-width: 1900px) {
 
     body {
@@ -575,6 +581,7 @@ body {
     .projects-container {
 
         .fader {
+            width: 75%;
             margin-top: 4rem;
         }
 
