--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -25,7 +25,7 @@ body {
 
     h1 {
         width: 100%;
-        font-size: 2.5em;
+        font-size: 2.5rem;
         color: $highlightFont;
         text-align: center;
     }
@@ -72,7 +72,7 @@ body {
                 margin-right: 2rem;
             }
             &:hover {
-                color: $highlightFont;
+                color: $highlightFont;;
             }
         }
 
@@ -157,6 +157,18 @@ body {
 
                 &:hover {
                     text-shadow: 0 0 12px white;
+                    // text-decoration: underline;
+                    // text-decoration-color: rgba(255,255,255,0.75);
+                    // text-decoration-thickness: 3px;
+
+                    &::before {
+                        position: absolute;
+                        left: -20px;
+                        top: 0;
+                        height: 100%;
+                        width: 20px;
+                        content: '‣';
+                    }
                 }
             }
 
@@ -164,6 +176,10 @@ body {
                 color: $highlightFont;
                 &:hover {
                     text-shadow: none;
+                    // text-decoration: none;
+                    &::before {
+                        display: none;
+                    }
                 }
             }
         }
@@ -240,9 +256,9 @@ body {
 
 .main {
     position: relative;
-    width: calc(100vw - #{$menu-width});
     height: 100vh;
-    margin-left: $menu-width;
+    width: calc(100vw - #{$menu-width} * 0.8);
+    margin-left: calc(#{$menu-width} * 0.8);
     overflow: hidden;
     display: flex;
     justify-content: center;
@@ -395,15 +411,28 @@ body {
     align-items: center;
     background-color: rgba(0,0,0,0.9);
     z-index: 99;
+    
+    .action-message {
+        color: white;
+        position: fixed;
+        margin: auto;
+        z-index: -1;
+    }
 
     .image {
         width: 75vw;
         height: 50vw;
         max-width: 75vw;
         max-height: 75vh;
+        opacity: 0;
         background-repeat: no-repeat;
         background-size: contain;
         background-position: center;
+        transition: opacity 800ms ease;
+
+        &:hover {
+            opacity: 1;
+        }
     }
 
     .close-fullscreen {
@@ -421,6 +450,14 @@ body {
     }
 }
 
+@media screen and (hover: none) {
+    .fullscreen {
+        .image {
+            opacity: 1;
+        }
+    }
+}
+
 @media screen and (max-width: 750px) {
 
     .header {
@@ -433,6 +470,10 @@ body {
     }
 
     .fullscreen {
+
+        // .image {
+        //     opacity: 1;
+        // }
 
         .close-fullscreen {
             width: 40px;
@@ -489,8 +530,9 @@ body {
             align-items: center;
 
             ul {
-                margin-right: 0;
+                margin: 0;
                 transform: rotate(0);
+                font-size: 1.5rem;
                 .link {
                     transform: rotate(0);
                 }
@@ -533,7 +575,7 @@ body {
     }
 
     .menu-container .menu {
-        width: calc(#{$menu-width} * 1);
+        width: calc(#{$menu-width} * 0.9);
 
         ul {
             font-size: 1.2rem;
@@ -547,7 +589,7 @@ body {
         font-size: 2rem;
 
         h1 {
-            font-size: 4em;
+            font-size: 4rem;
         }
     }
 
@@ -568,16 +610,16 @@ body {
     }
 
     .menu-container .menu {
-        width: calc(#{$menu-width} * 1.5);
+        width: calc(#{$menu-width} * 1.3);
 
         ul {
-            font-size: 1.6rem;
+            font-size: 1.8rem;
         }
     }
 
     .main {
-        margin-left: calc(#{$menu-width} * 2);
-        width: calc(100vw - (#{$menu-width} * 2));
+        margin-left: calc(#{$menu-width} * 1.2);
+        width: calc(100vw - (#{$menu-width} * 1.2));
 
         &::before {
             height: calc(#{$contactHeight} * 4);
@@ -589,22 +631,29 @@ body {
         .fader {
             width: 75%;
             margin-top: 4rem;
+
+            .image-container {
+                &::before, &::after {
+                    bottom: 10px;
+                    width: 75%;
+                }
+        
+                &::before {
+                    transform: rotate(-1deg);
+                }
+        
+                &::after {
+                    transform: rotate(1deg);
+                }
+            }
+
+            .project-links {
+                a {
+                    padding: 2.5rem 2rem;
+                }
+            }
         }
 
-        .image-container {
-            &::before, &::after {
-                bottom: 10px;
-                width: 75%;
-            }
-    
-            &::before {
-                transform: rotate(-1deg);
-            }
-    
-            &::after {
-                transform: rotate(1deg);
-            }
-        }
     }
 }
 
@@ -613,7 +662,7 @@ body {
         width: calc(#{$menu-width} * 2);
 
         ul {
-            font-size: 1.5em;
+            font-size: 3rem;
         }
     }
 
@@ -629,6 +678,8 @@ body {
     }
 
     .main {
+        margin-left: calc(#{$menu-width} * 1.6);
+        width: calc(100vw - (#{$menu-width} * 1.6));
         &::before {
             height: calc(#{$contactHeight} * 6.5);
         }
