--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -27,7 +27,7 @@ body {
         width: 100%;
         font-size: 2.5rem;
         color: $highlightFont;
-        text-align: center;
+        margin-bottom: 2rem;
     }
 
     a {
@@ -66,15 +66,16 @@ body {
             position: relative;
             display: flex;
             align-items: center;
-            height: 80%;
+            height: 85%;
             margin: 0 10px;
+            cursor: pointer;
             &::before {
                 content: '';
                 background: white;
                 position: absolute;
                 top: -20%;
                 right: -5%;
-                width: 2px;
+                width: 1px;
                 height: 140%;
                 transform: rotate(5deg);
             }
@@ -88,7 +89,7 @@ body {
             span {
                 cursor: pointer;
                 margin: 0 10px;
-                font-size: 1.2rem;
+                font-size: 1rem;
 
                 &:first-child {
                     margin-left: 20px;
@@ -304,13 +305,26 @@ body {
 }
 
 .home-container, .contact-container {
-    height: 70%;
-    justify-content: center;
+    justify-content: flex-start;
+    gap: 2rem;
+    align-items: center;
+
     & > div {
-        width: 80%;
-        background-color: rgba($highlightFont,0.7);
-        padding: 1rem;
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        p {
+            align-self: flex-start;
+        }
+
+        ul {
+            margin: 0;
+        }
+
     }
+
 }
 
 #home {
@@ -334,7 +348,8 @@ body {
     padding: 1.5rem 2.5rem;
     opacity: 0;
     color: black;
-    background-color: rgba($highlightFont, 0.25);
+    background-color: rgba($highlightFont, 0.15);
+    // border: 1px solid black;
     clip-path: polygon(4% 0, 100% 0, 96% 100%, 0 100%);
     transform: translateX(25vw);
     transition: transform 650ms ease-out, opacity 250ms ease-in, width 400ms ease-in-out;
@@ -521,7 +536,7 @@ body {
 
 }
 
-@media screen and (max-width: 250px) {
+@media screen and (max-width: 330px) {
     .logo {
         width: 0;
     }
@@ -540,6 +555,7 @@ body {
             justify-content: flex-end;
 
             .logo {
+                height: 55%;
                 &::before {
                     display: none;
                 }
