--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -168,7 +168,18 @@ body {
             width: 30px;
             height: 30px;
             border-radius: 50%;
-            background: white;
+            background: grey;
+
+            &::before {
+                position: absolute;
+                content: "Toggle dark mode";
+                font-size: 0.8em;
+                color: white;
+                top: 23%;
+                width: 11rem;
+                height: 90%;
+                left: -120px;
+            }
         }
 
         ul {
@@ -195,9 +206,6 @@ body {
 
                 &:hover {
                     text-shadow: 0 0 12px white;
-                    // text-decoration: underline;
-                    // text-decoration-color: rgba(255,255,255,0.75);
-                    // text-decoration-thickness: 3px;
 
                     &::before {
                         position: absolute;
@@ -224,7 +232,7 @@ body {
         }
     }
 
-    .toggler {
+    .menu-toggler {
         position: absolute;
         width: 100%;
         height: 100%;
@@ -375,7 +383,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 75%;
+    width: 70%;
+    max-width: 1300px;
     padding: 1.5rem 2.5rem;
     opacity: 0;
     color: black;
@@ -404,7 +413,7 @@ body {
             display: none;
             justify-content: center;
             align-items: center;
-            top: -5px;
+            top: -25px;
             right: 10px;
             color: black;
             cursor: pointer;
@@ -681,7 +690,7 @@ body {
 
     .menu-container {
 
-        .toggler {
+        .menu-toggler {
             display: block;
         }
     
@@ -718,16 +727,13 @@ body {
 
             div {
                 height: 5px;
-                // background-color: white;
                 
                 &::before {
-                    // background-color: white;
                     top: -10px;
                     height: 5px;
                 }
                 
                 &::after {
-                    // background-color: white;
                     bottom: -10px;
                     height: 5px;
                 }
@@ -735,14 +741,14 @@ body {
         }
     }
 
-    .toggler:checked ~ .menu {
+    .menu-toggler:checked ~ .menu {
         top: 0;
     }
 }
 
 @media screen and (min-width: 900px) {
     .fader {
-        width: 60%;
+        // width: 60%;
         .image-container {
             margin: 1rem 1rem 1.5rem;
         }
@@ -800,6 +806,10 @@ body {
         .fader {
             margin-top: 4rem;
             padding: 2.5rem;
+
+            &:first-child {
+                margin-top: 0;
+            }
 
             .image-container {
                 &::before, &::after {
@@ -874,8 +884,7 @@ body {
     }
     .fader {
         background: none;
-        border: 1px solid rgba($highlightFont, 0.35);
-        border-radius: 6px;
+        box-shadow: 0 0 4px 0 rgba($highlightFont, 0.35);
         color: white;
 
         .project-links a {
